# aiko_chat

./: ReadMe.md  pyproject.toml
src/aiko_chat/: __init__.py  bot.py  chat.py  chat_start.sh
